test/data/resolver/valid/edge_labelled_both_endpoints.cypher
MATCH (p:Person)-[r:AUTHORED]->(post:Post) RETURN p, r, post
