test/data/resolver/invalid/ambiguous_edge_orientation.cypher
MATCH (p:Person)-[r:AUTHORED]-(post:Post) RETURN r
